# ruc-sacj-research-schoolatlas

./: CONTRBUTING.md  README.md  SACJResearch_SchoolAtlas.html  SACJResearch_SchoolAtlas.ipynb  pyproject.toml
.ipynb_checkpoints/: CONTRBUTING-checkpoint.md  README-checkpoint.md  SACJResearch_SchoolAtlas-checkpoint.ipynb
shapefiles/: County_Boundaries_(polygon).dbf  County_Boundaries_(polygon).shx  County_Boundaries_(polygon).xml
